bin/tests/errors_sema/sema/sema_err_number_too_big.swg
#global fileprivate

const value = 9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999 // swc-expected-error {{sema_err_number_too_big}}
